# OpenMP_exercises

./: CMakeLists.txt  benchmarking.c  benchmarking.h  main.c  typedefs.h
MPI/Jacobi/: jacobi.c  jacobi.h
MPI/MatrixVector/: matrix_vector_mpi.c  matrix_vector_mpi.h
MPI/integration/: integration.c  integration.h
MPI/ping_pong/: pingPong-a.c  pingPong-a.h  pingPong-b.c  pingPong-c.c  pingPong-d.c  pingPong-e.c
fixit/: fixit.c
matrix_vector/: mv.c  mv.h
openMP/fixit/: fixit.c  fixit.h
openMP/matrix_matrix/: matrix-matrix.c  matrix-matrix.h
openMP/matrix_vector/: mv.c  mv.h
openMP/pi/: pi.c  pi.h
pi/: SIMD.h  pi.c  pi.h
utils/: utils.h
